<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.blogspot.smallshipsinvest.coolcard.MainActivity"
    android:background="@color/colorPostalBlue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/small_text"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enter_code"
        android:textSize="@dimen/small_text"
        android:textColor="@color/colorWhite"/>

    <EditText
        android:id="@+id/code"
        android:layout_width="@dimen/code_view_length"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:digits="qwertyuiopasdfghjklzxcvbnm1234567890"
        android:singleLine="true"
        android:inputType="textNoSuggestions"
        android:maxLength="10"
        android:padding="@dimen/large_separation"
        android:textSize="@dimen/large_text"
        android:textColor="@color/colorPostalRed"/>


    <!--android:inputType="textVisiblePassword"-->

    <com.blogspot.smallshipsinvest.coolcard.helpers.MyButtonWhite
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="runViewFromMain"
        android:text="@string/view"
        android:textSize="@dimen/normal_text"
        android:layout_margin="@dimen/large_separation"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.blogspot.smallshipsinvest.coolcard.helpers.MyButtonWhite
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="runTemplatesFromMain"
            android:text="@string/create"
            android:textSize="@dimen/normal_text"
            android:layout_margin="@dimen/large_separation"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:textSize="@dimen/small_text"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

</LinearLayout>
